Implementadas funcionalidades essenciais

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -116,6 +116,7 @@
 
 			</h:panelGrid>
 			<h:panelGrid columns="1">
+				<p:outputLabel value="Email:*" />
 				<p:inputText id="email" required="true" label="email" size="40"
 					requiredMessage="Por favor preencha o email"
 					validatorMessage="Formato inválido" value="#{userBean.user.email}">
